--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -13,7 +13,13 @@ a {
   }
   @include lg {
     padding: 0 6rem;
+    margin-top: 3rem;
   }
+  @include lg {
+    padding: 0 4rem;
+    margin-top: 3rem;
+  }
+
   &__header {
     display: flex;
     flex-direction: column;
@@ -25,11 +31,25 @@ a {
     @include text-style($neutral-black, 3.6rem, normal, 600, 4.4rem);
     text-align: center;
     max-width: 54.2rem;
+    @include lg {
+      @include text-style($neutral-black, 3.2rem, normal, 600, 4rem);
+    }
+    @include md {
+      @include text-style($neutral-black, 2.4rem, normal, 500, 3.2rem);
+    }
   }
   &__sub-heading {
     @include text-style($neutral-black, 1.6rem, normal, 400, 2.4rem);
     text-align: center;
     width: 62.8rem;
+    @include lg {
+      @include text-style($neutral-black, 1.4rem, normal, 600, 2rem);
+      width: 50rem;
+    }
+    @include md {
+      @include text-style($neutral-black, 1.2rem, normal, 500, 1.6rem);
+      width: 50rem;
+    }
   }
 }
 
